--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,27 @@ h1 {
     vertical-align: baseline;
 }
 
+h5 {
+    margin: 0;
+    font-weight: bolder;
+    font-size: 24px;
+}
+
+h6 {
+    font-size: 17px;
+    margin: 0;
+}
+
+p {
+    margin: 0;
+    font-weight: lighter;
+    font-size: 15px;
+}
+
+input {
+    margin: 0;
+}
+
 /* CLASSES */
 .header {
     font-size: 17px;
@@ -29,6 +50,13 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: flex-start;
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
+
+.under-img-box {
+    display: flex;
+    margin-top: 30px;
 }
 
 /* IDs */
@@ -58,6 +86,100 @@ h1 {
     z-index: -1;
 }
 
-#club-h2{
+#club-h2 {
     margin-top: -50px;
 }
+
+#address-box {
+    /* display: flex; */
+    width: 50%;
+    margin: 0px;
+}
+
+#description-box {
+    display: flex;
+    width: 50%;
+}
+
+#opening-hours {
+    width: 50%;
+}
+
+#click-for-menu {
+    text-decoration: underline;
+    width: 30%;
+}
+
+/* DROPDOWN MENU HENRI*/
+
+.bookings-bar {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.dropdown-button {
+    background-color: #FFFFFF;
+    font-size: 16px;
+    width: 164px;
+    height: 38px;
+    text-align: left;
+}
+
+.book-button {
+    background-color: black;
+    color: #FFFFFF;
+    font-size: 16px;
+    width: 169px;
+    height: 42px;
+    text-align: left;
+}
+
+/* DROPDOWN MENU W3S */
+/* Dropdown Button */
+.dropbtn {
+    background-color: #FFFFFF;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+    width: 169px;
+    height: 42px;
+    text-align: left;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd}
+  
+  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+  .show {display:block;}
