--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,11 @@ input {
     margin-top: 30px;
 }
 
+.signup-bar {
+    display: flex;
+    width: 100%;
+}
+
 /* IDs */
 #home-a {
     color: #FF4F59;
@@ -108,6 +113,34 @@ input {
 #click-for-menu {
     text-decoration: underline;
     width: 30%;
+}
+
+#signup-txt {
+    color: #FF4F59;
+    font-weight: bold;
+    width: 30%;
+    margin-right: 5px;
+}
+
+#input-email {
+    /* width: 263px;
+    height: 38px; */
+    width: 30%;
+    margin-right: 2px;
+    border-radius: 0;
+    padding-left: 5px;
+}
+
+#subscribe-btn {
+    background-color: #FF4F59;
+    color: white;
+    border: none;
+    margin-right: 5px;
+
+}
+
+#tm-text {
+    color: #969696;
 }
 
 /* DROPDOWN MENU HENRI*/
